<resources>
    <string name="beep">beep</string>
    <string name="boop">boop</string>
    <string name="description_add_item">Add Item Button</string>
    <string name="description_app_logo">Out of lens logo</string>
    <string name="description_calendar_icon">Ícone de calendário</string>
    <string name="description_camera_icon">Ícone de câmera</string>
    <string name="description_currentEmployeeImage">Current user logo</string>
    <string name="description_delete_icon">Ícone de apagar</string>
    <string name="description_edit_icon">Ícone de editar</string>
    <string name="description_equipment_icon">Ícone de equipamentos</string>
    <string name="description_equipmentType">Descrição</string>
    <string name="description_expand_icon">Ícone de expandir</string>
    <string name="description_filter_icon">Ícone de descrição</string>
    <string name="description_go_back">Ícone de voltar</string>
    <string name="description_icon">Ícone de galeria</string>
    <string name="description_package_icon">Ícone de pacote</string>
    <string name="description_report">Ícone de relatório</string>
    <string name="error_api_unavailable">Api indisponível</string>
    <string name="error_details_not_found">Modelo de equipamento não encontrado</string>
    <string name="error_empty_address">O endereço é obrigatório</string>
    <string name="error_empty_date">A data é obrigatória</string>
    <string name="error_empty_end_time">O horário de fim é obrigatório</string>
    <string name="error_empty_name">O nome é obrigatório</string>
    <string name="error_empty_order_id">O id do pedido é obrigatório</string>
    <string name="error_empty_start_time">O horário de início é obrigatório</string>
    <string name="error_fill_this_field">Preencha este campo</string>
    <string name="error_invalid_equipment_kind">Tipo de equipamento inválido selecionado</string>
    <string name="error_invalid_login">Login Inválido</string>
    <string name="error_invalid_numeric_id">ID inválido</string>
    <string name="error_invalid_order">Invalid order</string>
    <string name="error_invalid_price">Preço inválido</string>
    <string name="error_invalid_time_range">Insira um intervalo de tempo válido</string>
    <string name="error_missing_employee">O funcionário é obrigatório</string>
    <string name="error_missing_equipment">O equipamento é obrigatório</string>
    <string name="error_missing_equipment_kind">Insira o tipo de equipamento</string>
    <string name="error_missing_photoshoot">O ensario é obrigatório</string>
    <string name="error_missing_price">Preencha o valor</string>
    <string name="error_operation_failed">Erro na operação</string>
    <string name="error_unknown_qr">QR desconhecido</string>
    <string name="error_unsupported_qr">QR Code não suportado</string>
    <string name="format_duration_minutes">%d minutos</string>
    <string name="format_equipment_details_description">Imagem do modelo de equipamento %s</string>
    <string name="format_hour">%02d:%02d</string>
    <string name="format_id_name">#%d - %s</string>
    <string name="format_name_id">%s - %d</string>
    <string name="format_numeric_id">#%d</string>
    <string name="format_short_date">%s, %s de %s</string>
    <string name="format_string_id_name">#%s - %s</string>
    <string name="format_uuid_name">%s - %s</string>
    <string name="format_welcome">Boas Vindas, %s</string>
    <string name="label_active">Ativo</string>
    <string name="label_add_employee">Adicionar Funcionário</string>
    <string name="label_add_equipment">Adicionar Equipamento</string>
    <string name="label_add_equipment_details">Adicionar Modelo de Equipamento</string>
    <string name="label_add_firing">Adicionar Demissão</string>
    <string name="label_add_package_type">Adicionar Tipo de Pacote</string>
    <string name="label_add_photo_shoot">Adicionar Ensaio</string>
    <string name="label_address">Endereço</string>
    <string name="label_all">Todos</string>
    <string name="label_app_name">OOL-MOBILE</string>
    <string name="label_available">Disponível</string>
    <string name="label_unavailable">Indisponível</string>
    <string name="label_base_value">Valor Base</string>
    <string name="label_birth_date">Data de Nascimento</string>
    <string name="label_calendar">Calendário</string>
    <string name="label_content">Conteúdo</string>
    <string name="label_contentActivity">ContentActivity</string>
    <string name="label_cpf">CPF</string>
    <string name="label_date">Data</string>
    <string name="label_description">Descrição</string>
    <string name="label_detail_id">Código do modelo</string>
    <string name="label_email">Email</string>
    <string name="label_employee">Funcionário</string>
    <string name="label_end">Finalizar</string>
    <string name="label_end_time">Horário Final</string>
    <string name="label_enter">Entrar</string>
    <string name="label_equipment">Equipamento</string>
    <string name="label_equipment_types">Tipos de Equipamento</string>
    <string name="label_equipment_details">Modelo do Equipamento</string>
    <string name="label_equipment_image">Imagem</string>
    <string name="label_equipment_name">Nome</string>
    <string name="label_equipment_price_input">Valor do seguro</string>
    <string name="label_equipment_type">Tipo do Equipamento</string>
    <string name="label_equipment_withdraw">Retirada de Equipamento</string>
    <string name="label_equipments">Equipamentos</string>
    <string name="label_expected_devolution_date">Data de devolução esperada</string>
    <string name="label_expected_devolution_time">Horário de devolução esperado</string>
    <string name="label_filter">Filtrar por</string>
    <string name="label_finish">Finalizar</string>
    <string name="label_firing_date">Data da Demissão</string>
    <string name="label_id">ID</string>
    <string name="label_idk">Câmera</string>
    <string name="label_image">Imagem</string>
    <string name="label_image_quantity">Quantidade de Imagens</string>
    <string name="label_max_iterations">Iterações Máximas</string>
    <string name="label_name">Nome</string>
    <string name="label_occupation">Ocupação</string>
    <string name="label_order">Pedido</string>
    <string name="label_package_type">Tipo de Pacote</string>
    <string name="label_packages">Pacotes</string>
    <string name="label_password">Senha</string>
    <string name="label_password_confirmation">Confirmação da Senha</string>
    <string name="label_phone">Telefone</string>
    <string name="label_photoshoot">Ensaio</string>
    <string name="label_photoshootId">ID Ensaio</string>
    <string name="label_photoshoot_info">Informações do ensaio</string>
    <string name="label_price">Preço</string>
    <string name="label_price_per_photo">Preço por Foto</string>
    <string name="label_quantity">Quantidade</string>
    <string name="label_quantityMultiplier">Multiplicador de Quantidade</string>
    <string name="label_report">Relatório</string>
    <string name="label_reports">Relatórios</string>
    <string name="label_save">Salvar</string>
    <string name="label_scan_qr">Escaneie o QR</string>
    <string name="label_search">Procurar</string>
    <string name="label_select_end_time">Selecione o horário de fim</string>
    <string name="label_select_start_time">Selecione o horário de início</string>
    <string name="label_shift">Turno</string>
    <string name="label_social_name">Nome Social</string>
    <string name="label_start_time">Horário Inicial</string>
    <string name="label_today_todo">Pendencias Diárias</string>
    <string name="label_type">Tipo</string>
    <string name="label_update_equipment">Atualizar Equipamento</string>
    <string name="label_update_equipment_details">Atualizar Modelo de Equipamento</string>
    <string name="label_update_photoshoot">Atualizar Ensaio</string>
    <string name="label_view">Visualizar</string>
    <string name="label_whats_up">Veja o que você tem de novo</string>
    <string name="menu_calendar">Calendário</string>
    <string name="menu_calendar_listLabel">Eventos</string>
    <string name="menu_calendar_viewLabel">Calendário</string>
    <string name="menu_customers">Clientes</string>
    <string name="menu_employees">Funcionários</string>
    <string name="menu_equipment_details">Detalhes dos Equipamentos</string>
    <string name="menu_equipment_withdraw">Retiradas de Equipamentos</string>
    <string name="menu_equipments">Equipamentos</string>
    <string name="menu_firings">Demissões</string>
    <string name="menu_hirings">Contratos</string>
    <string name="menu_home">Página Inicial</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_packages">Pacotes</string>
    <string name="menu_payment_types">Tipos de Pagamento</string>
    <string name="menu_payments">Pagamentos</string>
    <string name="menu_photoshoots">Ensaios</string>
    <string name="menu_reports">Relatórios</string>
    <string name="message_withdraw_finished">Devolução finalizada</string>
    <string name="missing_devolution_date">Preencha a data de devolução</string>
    <string name="missing_devolution_time">Preencha o horário de devolução</string>
    <string name="sample_date">25/07/2021</string>
    <string name="sample_day_of_month">24</string>
    <string name="sample_day_of_week">SEG</string>
    <string name="sample_default_date_title">Pick a date</string>
    <string name="sample_description">beep boop beep boop</string>
    <string name="sample_employeeName">Pedro Fernandes Tamas</string>
    <string name="sample_employeeRole">Analista de Front-End</string>
    <string name="sample_employee_data">20 - Carlos Pereira</string>
    <string name="sample_id">10</string>
    <string name="sample_image_description">Sample Image</string>
    <string name="sample_max_iterations">5</string>
    <string name="sample_package_description">Alguma Descrição</string>
    <string name="sample_package_name">Casamento</string>
    <string name="sample_package_quantity">100</string>
    <string name="sample_package_type">Cerimônia de Confraternização</string>
    <string name="sample_photoshoot_date_0">segunda, 24 de julho</string>
    <string name="sample_photoshoot_date_1">sexta, 20 de julho</string>
    <string name="sample_photoshoot_name_0">Aniversário de Andy</string>
    <string name="sample_photoshoot_name_1">Casamento Hippie</string>
    <string name="sample_price">R$ 50</string>
    <string name="sample_quantity">3</string>
    <string name="sample_reportName">Algum Relatório</string>
    <string name="sample_report_title">Acontecimento</string>
    <string name="symbol_questionMark">\?</string>
    <string name="value_add">Adicionar</string>
    <string name="value_available">Disponível</string>
    <string name="value_no">Não</string>
    <string name="value_no_date">Nenhuma</string>
    <string name="value_update">Atualizar</string>
    <string name="value_yes">Sim</string>
    <string name="error_not_negative_price">O preço deve ser positivo</string>
    <string name="label_logout">Logout</string>
    <string name="label_todo">Todo</string>
    <string name="label_none">Nenhum</string>
    <string name="label_password_confirmtation">Confirmação de Senha</string>
    <string name="label_access_level">Nivel de acesso</string>
    <string name="label_gender">Gênero</string>
    <string name="error_missing_employee_name">O nome é obrigatório</string>
    <string name="error_missing_employee_social_name">O nome social é obrigatório</string>
    <string name="error_missing_employee_birth_date">A data de nascimento é obrigatória</string>
    <string name="error_missing_employee_phone">O telefone é obrigatório</string>
    <string name="error_missing_employee_password">A senha é obrigatória</string>
    <string name="error_missing_employee_password_confirmation">A confirmação de senha é obrigatória</string>
</resources>