<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_calendar" />

        <item
            android:id="@+id/nav_package"
            android:icon="@drawable/ic_package"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_packages" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_file"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_reports" />

        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_camera_roll"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_equipments" />

        <item
            android:id="@+id/nav_equipment_details"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_equipment_details" />

        <item
            android:id="@+id/nav_equipment_borrowing"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_equipment_borrowings" />

        <item
            android:id="@+id/nav_photoshoots"
            android:icon="@drawable/ic_camera"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_photoshoots" />

        <item
            android:id="@+id/nav_employee"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_employees" />

        <item
            android:id="@+id/nav_customer"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_customers" />

        <item
            android:id="@+id/nav_order"
            android:iconTint="@color/gray_dark"
            android:title="@string/menu_orders" />



    </group>
</menu>