<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.example.ool_mobile.ui.form.photoshoot.PhotoshootFormActivity" />

        <variable
            name="viewModel"
            type="com.example.ool_mobile.ui.form.photoshoot.viewmodel.PhotoshootViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingTop="32dp"
        android:paddingEnd="24dp"
        tools:context=".ui.form.photoshoot.PhotoshootFormActivity">

        <ImageView
            android:id="@+id/addPhotoShoot_backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/primaryLightColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back"
            android:contentDescription="@string/description_go_back"
            android:onClick="@{() -> activity.onBackPressed()}" />

        <TextView
            android:id="@+id/addPhotoshootActivity_titleTextView"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/label_add_photo_shoot"
            android:textColor="@color/gray_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/addPhotoShoot_backImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhotoshootActivity_titleTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addPhotoshootActivity_orderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_light"
                android:hint="@string/label_order"
                android:text="@={viewModel.input.orderId}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addPhotoshootActivity_addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_light"
                android:hint="@string/label_address"
                android:text="@={viewModel.input.address}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.example.ool_mobile.ui.component.date_dialog.DateDialogView
            android:id="@+id/addPhotoshootActivity_dateDialogView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
            android:layout_marginTop="16dp"
            app:dialogDate="@={viewModel.input.date}"
            app:hint="@string/label_date" />

        <com.example.ool_mobile.ui.component.date_dialog.TimeDialogView
            android:id="@+id/addPhotoShoot_startTimeInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhotoshootActivity_dateDialogView"
            app:hint="@string/label_start_time"
            app:dialogTime="@={viewModel.input.startTime}" />

        <com.example.ool_mobile.ui.component.date_dialog.TimeDialogView
            android:id="@+id/addPhotoShoot_endTimeInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhotoShoot_startTimeInputLayout"
            android:clickable="false"
            app:hint="@string/label_end_time"
            app:dialogTime="@={viewModel.input.endTime}" />


        <Button
            android:id="@+id/addPhotoShoot_saveButton"

            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_save"
            android:textColor="@color/primaryLightColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addPhotoShoot_endTimeInputLayout"
            app:strokeColor="@color/primaryLightColor"
            android:onClick="@{() -> viewModel.savePhotoshoot()}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>