<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.ool_mobile.ui.home.HomeViewModel" />

        <variable
            name="fragment"
            type="com.example.ool_mobile.ui.home.HomeFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/homeFragment_welcomeTextView"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/rambla"
            tools:text="@string/format_welcome"
            android:text='@{viewModel.employeeName == null ? "Boas Vindas" : @string/format_welcome(viewModel.employeeName)}'
            android:textColor="@color/gray_dark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> fragment.openNavigation()}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rambla"
            android:textColor="@color/partial_gray_dark"
            android:text="@string/label_logout"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/homeFragment_welcomeTextView"
            app:layout_constraintTop_toTopOf="@id/homeFragment_welcomeTextView"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> viewModel.logout()}" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_whats_up"
            android:textAllCaps="true"
            android:textColor="@color/partial_gray_dark"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeFragment_welcomeTextView" />

        <TextView
            android:id="@+id/textView8"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_today_todo"
            android:textColor="@color/gray_dark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/capa_inicio"
            android:contentDescription="@string/sample_image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeFragment_recyclerView" />

        <TextView
            android:id="@+id/homeFragment_weekTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.dayOfWeek}"
            android:textAllCaps="true"
            android:textColor="@color/gray_dark"
            app:layout_constraintBottom_toTopOf="@+id/homeFragment_monthTextView"
            app:layout_constraintEnd_toEndOf="@+id/homeFragment_monthTextView"
            app:layout_constraintStart_toStartOf="@+id/homeFragment_monthTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/sample_day_of_week" />

        <TextView
            android:id="@+id/homeFragment_monthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.dayOfMonth}"
            android:textColor="@color/primaryLightColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeFragment_weekTextView"
            tools:text="@string/sample_day_of_month" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_pendingSessions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/homeFragment_monthTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:listitem="@layout/row_pending_photoshoot"
            app:fixedLinear="@{true}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeFragment_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:listitem="@layout/row_option_item"
            tools:itemCount="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>